@@ -4,6 +4,7 @@ import dev.the_fireplace.textbook.Textbook;
 import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.client.gui.screen.ingame.BookScreen;
 import net.minecraft.client.gui.widget.ButtonWidget;
+import net.minecraft.client.gui.widget.CheckboxWidget;
 import net.minecraft.text.Text;
 import net.minecraft.text.TranslatableText;
 import org.spongepowered.asm.mixin.Mixin;
@@ -24,10 +25,16 @@ public abstract class BookScreenMixin extends Screen {
 
 	@Inject(at = @At(value="TAIL"), method = "init")
 	private void init(CallbackInfo info) {
+		CheckboxWidget preserveWhitespaceCheckbox = new CheckboxWidget(this.width / 2 + 2, 196 + 40 + 4, 98, 20, new TranslatableText("gui.textbook.export.preserve_whitespace"), true);
+		this.addDrawableChild(preserveWhitespaceCheckbox);
 		this.addButton(new ButtonWidget(this.width / 2 + 2, 196 + 20 + 2, 98, 20, new TranslatableText("gui.textbook.export"), (buttonWidget) -> {
 			File exportFile = Textbook.getLogic().fileSaveSelectionDialog();
 			if (exportFile != null) {
-				Textbook.getLogic().exportContents(exportFile, contents);
+				if (preserveWhitespaceCheckbox.isChecked()) {
+					Textbook.getLogic().exportContentsPreservingWhitespace(exportFile, contents);
+				} else {
+					Textbook.getLogic().exportContents(exportFile, contents);
+				}
 			}
 		}));
 	}
